name:                esqueleto-streaming
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SupercedeTech/persistent-postgresql-streaming#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac van Bakel
maintainer:          isaac@supercede.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Esqueleto.PostgreSQL.Streaming
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , esqueleto
                     , persistent-postgresql-streaming
                     , persistent-postgresql
                     , resourcet
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SupercedeTech/persistent-postgresql-streaming
