name:                persistent-postgresql-streaming
version:             0.1.0.0
synopsis:            Memory-constant streaming of Persistent entities from PostgreSQL
description:
  This library provides a set of APIs for performing queries on Persistent
  entities in constant memory, streaming the results using @conduit@.
  .
  The library relies on PostgreSQL-specific features to avoid loading all the
  results of a query into memory at once. This allows for accessing tables of
  millions of entities from Haskell without a memory blow-up.
homepage:            https://github.com/SupercedeTech/persistent-postgresql-streaming#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac van Bakel
maintainer:          isaac@supercede.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.Persist.Postgresql.Streaming
                     , Database.Persist.Postgresql.Streaming.Internal
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , monad-logger
                     , mtl
                     , persistent >= 2.13.2
                     , persistent-postgresql >= 2.13.2
                     , postgresql-simple
                     , resourcet
                     , text
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SupercedeTech/persistent-postgresql-streaming
